--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -3,10 +3,13 @@
     border-radius: 10px;
     padding: 20px;
     margin: 20px;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    max-width: 20vw;
   }
   
   .card img {
-    width: 300px;
-    height: 300px;
+    margin: 0 auto;
+    object-fit: contain;
+    max-width: 19vw;
   }
