--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,11 @@ body {
   min-height: 100vh;
 }
 
+h1, h2, h3{
+  display: flex;
+  justify-content: center;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
